--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -124,7 +124,7 @@ Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspb
 
 ¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all jobs.
 
-² The RPi 400 has its 40 pin header exposed in a different orientation, so your Pioreactor won't be able to sit on top like for other RPi versions.
+² The RPi 400 has its 40 pin header exposed in a different orientation, so your Pioreactor won't be able to sit on top like for other RPi versions. Take a [look at this forum post](https://forum.pioreactor.com/t/using-a-raspberry-pi-400/113/8) to see how another user used the Raspberry Pi 400 with their Pioreactor.
 
 
 #### Do I need any cooling for the Raspberry Pi?
