--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -112,12 +112,12 @@ Raspberry Pi Hardware
 
 We've designed the hardware and software to be compatible with any Raspberry Pi that has onboard Wifi and a 40 pin header. That includes (at the time of writing):
 
-*   Raspberry Pi 3
-*   Raspberry Pi 3 B+
+*   Raspberry Pi 3 Model B
+*   Raspberry Pi 3 Model B+
 *   Raspberry Pi 3 Model A+
-*   Raspberry Pi 4 B
+*   Raspberry Pi 4 Model B
 *   Raspberry Pi Zero W (with header) ¹
-*   Raspberry Pi Zero 2 W
+*   Raspberry Pi Zero 2 W (with header)
 *   Raspberry Pi 400
 
 Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspberry Pi Zero 2 W** because of their low power consumption, slim build, and low price. Both have the necessary CPU power and memory for the Pioreactor workload, and are generally the cheapest on the list above (but see note on Zero W below).
