--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -80,7 +80,7 @@ Mixing and stirring in the Pioreactor
 
 #### How is mixing / stirring performed in the Pioreactor?
 
-Stirring is performed with a 15mm stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the stir bar can be controlled using the Pioreactor software. This stirring is also how aeration is done.
+Stirring is performed with a micro stir bar inside the vial, controlled by a pair of magnets spinning below the vial. The rotation speed, RPM, of the stir bar can be controlled using the Pioreactor software. This stirring is also how aeration is done.
 
 #### Can I use my own stir bar?
 
