--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -152,7 +152,7 @@ Easiest solution is to start over. You can edit the name in the RPi Imager, and 
 *   Try appending a backslash as well: `http://pioreactor.local/`
 *   The UI is hosted on **http**, not **http_s_**. Check if you are accessing `http` `://pioreactor.local`, and _not_ `https` `://pioreactor.local`.
 *   Try accessing using the url `http://<the permanent name of your Pioreactor aka hostname>.local`
-*   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`
+*   If you know your Raspberry Pi's IP, try `http://<IP address of your Raspberry Pi>`. Here's [information to determine the IP address](/user-guide/common-questions#how-can-i-determine-the-pioreactors-ip-address)
 *   When pressing the button on the HAT, does the blue LED show up? If not, installation may have failed. Try installing the image again, and double check the settings.
 *   Try power-cycling the Raspberry Pi (unplug and plug back in).
 *   In your Raspberry Pi Imager settings, confirm that you clicked "Set username and password", and used the username `pioreactor`. If not, try [reinstalling the image](/user-guide/software-set-up#setting-up-your-raspberry-pi).
