--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -16,6 +16,8 @@ We suggest using the UI to reboot your Pioreactor's software:
 
 ![Rebooting your pi](/img/user-guide/reboot.png)
 
+Pulling the plug is usually fine, but try to avoid doing it as much as possible.
+
 
 #### Why does the onboard blue LED keep flashing?
 
@@ -142,6 +144,10 @@ We turn off the "activity" LED (usually the green one) to save some power for th
 #### What is the username/password for the Raspberry Pi?
 
 When setting up your Raspberry Pi with the Pioreactor software, you would have chosen a password. Try the recommended username: `pioreactor`, and password: `raspberry`.
+
+#### Can I use the desktop interface (with a display) with the Pioreactor?
+
+Not currently. Our software is based of the "headless" operating-system, which doesn't have display output.
 
 
 Dosing
