small bits about LAP and others

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -9,7 +9,7 @@ import TOCInline from '@theme/TOCInline';
 
 ### Before you begin
 
-You can expect the setup process to take 10-15 minutes.
+You can expect the setup process to take 10-15 minutes. If you encounter any problems, feel free to email us for support at hello@pioreactor.com.
 
 
 :::info
@@ -17,7 +17,7 @@ You can expect the setup process to take 10-15 minutes.
 Before you get started, you'll need to have the following:
 
 1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
-2.  A blank microSD card, at least 16GB. We like SanDisk and Samsung SD cards for their longevity, but any good quality, class 10 SD card will do.
+2.  A blank microSD card, at least 16GB. We like 16GB or 32GB SanDisk and Samsung SD cards for their longevity, but any good quality, class 10 SD card will do.
 3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W).
 4.  A computer with internet access and ability to read & write to a microSD card.
 
