--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -91,7 +91,7 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
 #### Step 1. Install the worker software
 
-1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead.
+1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead. All the settings are the same, **except for the hostname**. See note below:
 
 :::note 
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
@@ -124,6 +124,10 @@ We recommend running a [self-test](/user-guide/running-self-test) on all Pioreac
 :::
 
 ## Troubleshooting
+
+#### My Pioreactor never flashes the blue LED
+ - Are you using a microSD card with size *larger* than 32GB? You may need to reformat it to FAT32. To do this, in the Rasbperry Pi Imager, first select "Erase: format card as FAT32" under "Choose OS". Then proceed with writing the image.
+
 
 #### My Pioreactor keeps flashing the blue LED
 On a successful start, the Pioreactor will flash its blue LED for about 2 seconds. If you observe the blue LED flashing for longer, something may be wrong. You can diagnose the problem by [counting the number of flashes observed](/user-guide/error-codes).
