adding settings worker

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -97,6 +97,14 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
 :::
 
+Below is a screenshot of example settings, your settings might be slightly different.
+
+
+<img src="/img/user-guide/rpi-imager-settings-worker.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
+
+
+
+
 2. After the image is written to the microSD card, place the microSD card into the Raspberry Pi and power it on. The Pioreactor's blue LED won't blink, as it's not 100% ready yet.
 
 2. After a few minutes, connect the new Pioreactor worker to your cluster using the UI. See next steps.
