--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -131,7 +131,9 @@ We recommend running a [self-test](/user-guide/running-self-test) on all Pioreac
 
 ## Troubleshooting
 
-#### My Pioreactor never flashes the blue LED
+#### My Leader Pioreactor never flashes the blue LED
+ - First, confirm that when you press the HAT button, the blue LED does not show up. If it does, you're good to go.
+ - It's likely that the installation failed (due to a settings issue), or there is a problem with the SD card. Double check the settings that you used and try reinstalling the image.
  - Are you using a microSD card with size *larger* than 32GB? You may need to reformat it to FAT32. To do this, in the Rasbperry Pi Imager, first select "Erase: format card as FAT32" under "Choose OS". Then proceed with writing the image.
 
 
