--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -124,17 +124,20 @@ We've designed the hardware and software to be compatible with any Raspberry Pi 
 *   Raspberry Pi 3 Model B
 *   Raspberry Pi 3 Model B+
 *   Raspberry Pi 3 Model A+
-*   Raspberry Pi 4 Model B
+*   Raspberry Pi 4 Model B ³
 *   Raspberry Pi Zero W (with header) ¹
 *   Raspberry Pi Zero 2 W (with header)
-*   Raspberry Pi 400
+*   Raspberry Pi 400 ²
+
+
 
 Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspberry Pi Zero 2 W** because of their low power consumption, slim build, and low price. Both have the necessary CPU power and memory for the Pioreactor workload, and are generally the cheapest on the list above (but see note on Zero W below).
 
-¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all jobs.
+¹ _Raspberry Pi Zero W_ is on the list above, and is very low cost compared to the others. They can absolutely be used for Pioreactors _as workers_ - we don't recommend them to be your _leader_ (note sure what these terms mean? Here's an introduction to [leader and workers](/user-guide/create-cluster)). As workers, Raspberry Pi Zero W perform just fine, but will respond slower to commands. Note that this does not include the Raspberry Pi Zero _2_ W model, which is fine for all roles.
 
-² The RPi 400 has its 40 pin header exposed in a different orientation, so your Pioreactor won't be able to sit on top like for other RPi versions. Take a [look at this forum post](https://forum.pioreactor.com/t/using-a-raspberry-pi-400/113/8) to see how another user used the Raspberry Pi 400 with their Pioreactor.
+² The Raspberry Pi 400 has its 40 pin header exposed in a different orientation, so your Pioreactor won't be able to sit on top like for other RPi versions. Take a [look at this forum post](https://forum.pioreactor.com/t/using-a-raspberry-pi-400/113/8) to see how another user used the Raspberry Pi 400 with their Pioreactor.
 
+³ Note that you don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM option RPi 4s (1GB or 2GB) to save some money. However, 4GB and 8GB are fine, too.
 
 #### Do I need any cooling for the Raspberry Pi?
 
