--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -52,7 +52,8 @@ What is an image file? It's a file that contains all the required software prein
     2. Check **Enable SSH**, and select **Use password authentication**.
     3. Check **Set username and password**. Enter the following:
         -   **username**: `pioreactor`
-        -   **password**: `raspberry` (you can change the password later).
+        -   **password**: `raspberry`.
+        -   Note: You can change the username and password later.
     4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet.
 	:::note
 	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
@@ -91,7 +92,7 @@ Workers are additional Pioreactors that you can control from a single UI. Togeth
 
 #### Step 1. Install the worker software
 
-1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead. All the settings are the same, **except for the hostname**. See note below:
+1. Follow the same instructions above, but use a [Pioreactor Worker image](https://github.com/pioreactor/custopizer/releases/latest/download/pioreactor_worker.zip) instead. All the settings are the same, including *username* and *password*, **but choose a new hostname**. See note below:
 
 :::note 
 Choose a hostname that isn't currently being used in your cluster, ex: `worker1`, `worker2`, etc.
