move numbers elsewhere

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -16,10 +16,10 @@ You can expect the setup process to take 10-15 minutes. If you encounter any pro
 
 Before you get started, you'll need to have the following:
 
-1.  A Raspberry Pi (our list of preferred Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
-2.  A blank microSD card, at least 16GB. We like 16GB or 32GB SanDisk and Samsung SD cards for their longevity, but any good quality, class 10 SD card will do.
-3.  A suitable power cord for the Raspberry Pi. (If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W).
-4.  A computer with internet access and ability to read & write to a microSD card.
+1.  A Raspberry Pi (our list of recommended Raspberry Pis is [here](/user-guide/common-questions#what-raspberry-pi-hardware-can-i-use-i-see-raspberry-pi-1-2-3-4-a-b--zero---its-confusing))
+2.  A blank microSD card (our recommended microSD cards is [here](/user-guide/common-questions#what-microsd-cards-do-you-recommend))
+3.  A suitable power supply for the Raspberry Pi (our recommended power supply units are [here](/user-guide/common-questions#what-power-supply-unit-do-i-need))
+4.  A computer with internet access and ability to read & write to a microSD card
 
 :::
 
@@ -71,7 +71,7 @@ What is an image file? It's a file that contains all the required software prein
 
     ![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
 
-8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After about **three minutes**, your Pioreactor HAT will briefly blink a blue LED for 2 seconds, telling us it is ready.
+8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After **a few minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
     <video width="520" muted loop="true" autoplay="autoplay">
