--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -139,7 +139,16 @@ Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspb
 
 ³ Note that you don't need a lot of RAM for the Pioreactor, so we recommend getting the lower RAM option RPi 4s (1GB or 2GB) to save some money. However, 4GB and 8GB are fine, too.
 
+#### What microSD cards do you recommend?
+
+At least 16GB. We like 16GB or 32GB SanDisk or Samsung microSD cards for their longevity, but any good quality, class 10 SD card will do.
+
+#### What power supply unit do I need?
+
+If you look at the power rating, it should be about 5 V and at least 2.25 A, or above 12 W. We really like the official Raspberry Pi PSUs, available at most places you can buy Raspberry Pis.
+
 #### Do I need any cooling for the Raspberry Pi?
+
 
 Nope, you shouldn't, unless you are connecting an external monitor. However, extra heat sinks are never a bad idea!
 
