can't use pioreactor as a hostname?

--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -48,7 +48,7 @@ What is an image file? It's a file that contains all the required software prein
     ![Click "Choose storage"](/img/user-guide/choose-storage.png)
 5. Click the settings menu (Gear button in the bottom right).
 	![Settings menu](/img/user-guide/rpi-click-settings.png)
-    1. Check **Set hostname**. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `pr1`.
+    1. Check **Set hostname**. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `pio1`. _Don't_ use `pioreactor`.
     2. Check **Enable SSH**, and select **Use password authentication**.
     3. Check **Set username and password**. Enter the following:
         -   **username**: `pioreactor`
