--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -141,7 +141,7 @@ Although you can use any above, **we like the Raspberry Pi 3 Model A+, and Raspb
 
 #### What microSD cards do you recommend?
 
-At least 16GB. We like 16GB or 32GB SanDisk or Samsung microSD cards for their longevity, but any good quality, class 10 SD card will do.
+At least 16GB. We like 16GB or 32GB SanDisk Edge or Samsung microSD cards for their longevity, but any good quality, class 10 SD card will do.
 
 #### What power supply unit do I need?
 
