--- a/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
@@ -11,9 +11,14 @@ The Pioreactor comes with a large set of functionality and behaviour to accompli
 
 ## Installing plugins
 
-From your Pioreactor's interface, the "Plugins" button on the left navigation bar will display all your currently installed plugins, and available plugins that meet standard requirements. We also encourage you to explore our [forums](https://forum.pioreactor.com/) for more plugins created by the community. 
+From your Pioreactor's interface, the "Plugins" button on the left navigation bar will display all your currently installed plugins, and some recommended plugins. We also encourage you to explore our [forums](https://forum.pioreactor.com/) for more plugins created by the community.
 
 ![Plugin page in the Pioreactor UI. The page shows a list of plugins, with a description of the plugin under each one.](/img/user-guide/plugin_page.png)
+
+You can also use the "Install plugin by name" button in the top-right to install a plugin that is not featured on this page.
+
+![Plugin page in the Pioreactor UI. The "install plugin by name" is highlighted.](/img/user-guide/plugin_page_button_highlight.png)
+
 
 ### Automations installed via plugins
 
