--- a/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
+++ b/user-guide/03-Extending your Pioreactor/06a-using-community-plugins.mdx
@@ -22,14 +22,14 @@ You can also use the "Install plugin by name" button in the top-right to install
 
 ### Automations installed via plugins
 
-After installation, dosing, LED, and temperature automations will be available in the list of automations available to you.
+Some plugins add new automations to your Pioreactor. After installing, new dosing, LED, or temperature automations will be available in the list of automations available to you.
 
 ![The UI of an automation installed via a plugin. The plugin is highlighted in the dropdown.](/img/user-guide/custom_automation_plugin.png)
 ![The UI of an automation installed via a plugin, with the automation's settings displayed.](/img/user-guide/custom_automation_plugin2.png)
 
 ### Activities installed via plugins
 
-After installation, an activity's state and settings will show up on each Pioreactor's card. Below, we've installed the pioreactor-air-bubbler plugin:
+Some plugins add new activities to your Pioreactor.  After installation, an activity's state and settings will show up on each Pioreactor's card. Below, we've installed the pioreactor-air-bubbler plugin:
 
 ![The Pioreactor card with the newly installed activity displayed.](/img/user-guide/custom_job_plugin.png)
 
