adding new docs on filezilla

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -231,7 +231,54 @@ On a computer that is connected to the internet, download the `.whl` file from t
 
 ##### To upgrade the core Pioreactor software
 
-On a computer that is connected to the internet, download the `.whl` file from the under "Assets" from the [latest release on Github](https://github.com/Pioreactor/pioreactor/releases/latest). Then, connect that computer to your Pioreactor's local access point's network. To each Pioreactor you wish to update software on, transfer the `.whl` file to the Pioreactor (using SFTP or FTP). Then, run `pio update --app --source <path/to/local/.whl>`
+For software versions 23.10.5 and beyond, there's a new way to update your Pioreactor software.
+
+1. On the [Releases page](https://github.com/Pioreactor/pioreactor/releases), download the `release_xx.xx.xx.zip` archive for the version you want.
+2. We need a software tool up upload this release to the Pioreactor. Download and open [FileZilla](https://filezilla-project.org/download.php?type=client).
+3. Connect to the Pioreactor's local-access-point, _pioreactor_.
+3. Enter the following credentials in the top-right:
+
+   - host: `pioreactor.local` (or, your `<leader hostname>.local` or its IP address)
+   - username: `pioreactor`
+   - password: `raspberry`
+   - port: `22`
+
+   Click `Quickconnect`. You should successfully connect to your Pioreactor's Raspberry Pi (and may need to accept a security pop-up).
+
+   ![filezilla UI connecting to Pioreactor's Raspberry Pi](/img/user-guide/connect_via_filezilla.png)
+
+5. On the left-hand side is your computer's file system. Find the `release_xx.xx.xx.zip` file you downloaded earlier, and double click it to upload to the Raspberry Pi (that filesystem is on the right).
+   ![filezilla UI uploading file to Pioreactor](/img/user-guide/upload_file_via_filezilla.png)
+6. You should see a successfully uploaded message, and the file should be present on the right-hand side now. You can close FileZilla.
+  ![filezilla UI successfully uploaded file to Pioreactor](/img/user-guide/successuful_upload.png)
+7. [SSH into your Pioreactor](/user-guide/accessing-raspberry-pi). Now enter:
+   ```
+   pio update app --source release_xx.xx.xx.zip
+   ```
+   (Of course, replace the `xx.xx.xx` with your version). This will kick off a task to update your software.
+
+8. To update your workers, first we will distribute the release file to all workers:
+   ```
+   pios cp release_xx.xx.xx.zip
+   ```
+
+9. Finally, run the following to update the software on the workers:
+   ```
+   pios update app --source release_xx.xx.xx.zip
+   ```
+
+-----
+
+To update the UI, the steps are similar:
+
+1. On the [releases page](https://github.com/Pioreactor/pioreactorui/releases), download the `Source code (tag.gz)` for the release you want.
+2. Using FileZilla, upload this archive to your leader's Raspberry Pi.
+3. SSH into your Raspberry Pi, and run:
+   ```
+   pio update ui --source pioreactorui-xx.xx.xx.tar.gz -v xx.xx.xx
+   ```
+   where `xx.xx.xx` is the version number, (ex: `23.10.4`).
+
 
 
 #### If I have multiple Pioreactor leaders on my network, what leader does `http://pioreactor.local` point to?
