--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -36,6 +36,8 @@ What is an image file? It's a file that contains all the required software prein
 
 2.  Download the latest version of [Raspberry Pi Imager](https://www.raspberrypi.org/software/) for your operating system and install it.
 3.  Open the newly-installed Raspberry Pi Imager.
+3.  Click **Choose Device**, and select your Raspberry Pi model.
+    ![Click "Choose Device"](/img/user-guide/choose_device.png)
 3.  Click **Choose OS**. Click on **Use custom** towards the bottom:
     ![Click "Choose OS"](/img/user-guide/choose-os.png)
     ![Select the "Use custom" option](/img/user-guide/use_custom_image.png)
@@ -46,27 +48,33 @@ What is an image file? It's a file that contains all the required software prein
 
 4. Insert your microSD card to your computer. After your microSD card is recognized by your computer, click **Choose Storage** and select it.
     ![Click "Choose storage"](/img/user-guide/choose-storage.png)
-5. Click the settings menu (Gear button in the bottom right).
-	![Settings menu](/img/user-guide/rpi-click-settings.png)
+5. Click **Next**.
+	![Click Next](/img/user-guide/choose-next.png)
+6. Click **Edit settings**:
+    <img src="/img/user-guide/choose-edit-settings.png" width="525" alt="Click edit settings" style={{margin: "auto", display:"block"}} />
+
     1. Check **Set hostname**. Input a unique name for this Pioreactor. Some names that we use for our first Pioreactor: `pioreactor1`, or `leader`, or `pio1`. _Don't_ use `pioreactor`.
-    2. Check **Enable SSH**, and select **Use password authentication**.
     3. Check **Set username and password**. Enter the following:
         -   **username**: `pioreactor`
         -   **password**: `raspberry`.
         -   Note: You can change the username and password later.
-    4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet.
-	:::note
-	Alternative: instead of trying to connect to a difficult-to-access network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
+    4. Check **Configure wireless LAN** and enter your network name into SSID network name, WiFi password, and country. Or leave blank if using ethernet,
+	:::tip
+    If you are having difficulty connecting to a network, like at a university that may not easily allow Raspberry Pi's, [there's a built-in solution for creating a local access point](/user-guide/local-access-point)).
 	:::
 	
     5. Change timezone to your local timezone.
+    6. Under the "Services" tab, check **Enable SSH**, and select **Use password authentication**.
 
     Your settings should look something like this:
 
     <img src="/img/user-guide/rpi-imager-settings.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
 
+    <img src="/img/user-guide/rpi-imager-settings-2.png" width="625" alt="Screenshot of what your settings should look like" style={{margin: "auto", display:"block"}} />
+
     6.  Click **Save** to save and exit the dialog box.
-8.  Click **Write**. A prompt *may* appear asking for permission to write, accept it. Writing will take up to 5 minutes. Perfect time for a tea break.
+
+7. Click "Yes" to begin writing. A prompt *may* appear asking for permission to write, accept it. Writing will take up to 5 minutes. Perfect time for a tea break.
 7.  Once writing is complete, remove the microSD card, and place it (exposed copper side up) into the Raspberry Pi. **Your Raspberry Pi's power should be unplugged before inserting the microSD card**. The microSD slot is located on the PWM side of the Pioreactor, in the gap between the Raspberry Pi and the bottom faceplate. Reference the picture for the orientation.
 
     ![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
