notes on cleaning

--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -70,7 +70,7 @@ Of course! The only two requirements are that the spectrum of the LED overlaps w
 
 When you are using additional LEDs outside of the optical density LED & photodiode pair, you may worry that your additional LEDs will interfere with the optical density measurement. This won't happen, as we turn off all non-optical density LEDs before taking an optical density measurement.
 
-### Is optical density the same as turbidity?
+#### Is optical density the same as turbidity?
 
 Turbidity is a measure of optical density, like how decibels are a measurement of sound intensity. Likewise, absorbance is a measure of optical density.
 
