--- a/user-guide/01-getting-started/01c-software-set-up.mdx
+++ b/user-guide/01-getting-started/01c-software-set-up.mdx
@@ -79,7 +79,7 @@ What is an image file? It's a file that contains all the required software prein
 
     ![Insert the microSD card](/img/user-guide/place-micro-sd-card.JPG)
 
-8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up. After **a few minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
+8.  Plug power into your Raspberry Pi. LEDs onboard the Raspberry Pi may start to light up momentarily. After **a few minutes**, your Pioreactor HAT will briefly blink a blue LED, telling us it is ready.
 
 <p align="center">
     <video width="520" muted loop="true" autoplay="autoplay">
