--- a/user-guide/99-common-questions.mdx
+++ b/user-guide/99-common-questions.mdx
@@ -33,6 +33,16 @@ The button on the Pioreactor HAT sends a signal to the web UI to display a "hell
 
 The button can be [reprogrammed](/developer-guide/hat-button), too.
 
+#### How do I change the date or time on the Pioreactor?
+
+[SSH](/user-guide/accessing-raspberry-pi) into your Pioreactor, and run:
+```
+sudo date --set "Thu Nov  2 09:46:50 EDT 2023"
+
+```
+
+
+
 
 
 Optical density and LEDs
